public/index.css
body {
  --template-bg-color: #202E5F;
  --template-color-1: #FCC160;
  --template-placeholder-color-1: #FCC160AA;
  --template-color-2: #F16B7D;
  --template-placeholder-color-2: #F16B7DAA;
  --font-color: #FCFCFC;
  --placeholder-color: #fffa;
  --image-container-font-size: 3.2vw;
  --image-container-plus-size: 7vw;
  --textarea-font-size: 2.6vw;
  --wrapper-button-font-size: 4vw;
  font-family: 'Fb Jabutinski Con';
  margin: 0;
}

.english {
  font-family: 'Fb Jabutinski Con English';
}



#generator-wrapper {
  width: 100vw;
  height: 83.3vw;
  position: relative;
  display: grid;
  grid-template-columns: 1fr 5fr;
}

#generator-wrapper button {
  grid-area: 1 / 1 / 2 / 2;
  position: relative;
  border-radius: 50vw;
  border: none;
  color: white;
  height: 6%;
  font-family: 'FB JABUTINSKI CON';
  top: 50%;
  padding: 0;
  margin: 8%;
  background: var(--template-bg-color);
  font-size: var(--wrapper-button-font-size);
}

.image-generator {
  grid-area: 1 / 2 / 2 / 3;
  background: var(--template-bg-color);
  display: grid;
  grid-template-rows: 11fr 6fr 8fr;
}

.image-generator #banners {
  grid-area: 1 / 1 / 2 / 2;
  display: grid;
  grid-template-columns: 3fr 7fr 3fr;
  grid-template-rows: 4fr 4fr 3fr 6fr 2fr 3fr;;
}

@media screen and ( max-aspect-ratio: 1/1) {
  body {
    --image-container-font-size: 3.84vw;
    --image-container-plus-size: 8.4vw;
    --textarea-font-size: 3.12vw;
  }

  #generator-wrapper {
    grid-template-columns: 1fr;
    grid-template-rows: 7fr 1fr;
    width: 100vw;
    height: 114.286vw;
  }

  #generator-wrapper button {
    grid-area: 2 / 1 / 3 / 2;
    height: 50%;
    margin: 3%;
    top: unset;
  }

  .image-generator {
    grid-area: 1 / 1 / 2 / 2;
  }
}

.image-generator #info {
  grid-area: 2 / 1 / 3 / 2;
  display: grid;
  grid-template-rows: 8fr 4fr;
  grid-template-columns: 1fr 21fr 1fr;
}


.image-generator #info .textarea {
  text-align: center;
  width: 100%;
  height: 100%;
  grid-area: 1 / 2 / 2 / 3;
}

.image-generator #footer {
  background-color: var(--template-color-2);
  grid-area: 3 / 1 / 4 / 2;
  position: relative;
}

.image-generator #footer img {
  position: absolute;
  width: 100%;
  height: 100%;
}


#user-images-banner {
  grid-area: 2 / 2 / 6 / 3;
  display: flex;
  flex-direction: row-reverse;
  position: relative;
}

#user-images-banner img {
  position: absolute;
  width: 100%;
  height: 100%;
}

.user-image-container {
  width: 50%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
}

.user-image-container p {
  margin: 0;
  text-align: center;
  color: var(--placeholder-color);
  margin-top: 30%;
  font-size: var(--image-container-font-size);
}

.user-image-container p:nth-child(2) {
  left: 36%;
  position: absolute;
  top: 25%;
  font-size: var(--image-container-plus-size);
  font-family: 'FB PASHUT CORDUROY';
}

#user-self-image-container {
  transform: translateX(-5%);
}

#user-inspiration-image-container {
  transform: translateX(8.2%);
}

#user-self-image-container div p:nth-child(2){
  color: var(--template-color-2);
}

#user-inspiration-image-container div p:nth-child(2){
  left: 36%;
  color: var(--template-color-1);
}

.user-image {
  border-radius: 50%;
  overflow: hidden;
  height: 83.3%;
  margin: 9.2% 4.2% 5.4% 0.7%;
  position: relative;
}



.textarea {
  font-size: var(--textarea-font-size);
  cursor: text;
  color: var(--font-color);;
  border: none;
  direction: rtl;
  resize: none;
  width: 80%;
  background: #0000;
  font-family: inherit;
  overflow: hidden;
  text-align: right;
  padding: 0% 1%;
  line-height: 120%;
  display: block;
}

.textarea[placeholder]:empty:before {
    content: attr(placeholder);
    color: var(--placeholder-color);; 
}

.textarea[placeholder]:empty:focus::before {
    content: "";
}

#user-self-name {
  grid-area: 3 / 3 / 4 / 4;
  text-align: left;
  --placeholder-color: var(--template-placeholder-color-2);
  font-weight: bold;
  color: var(--template-color-2);  
}

#user-self-description {
  grid-area: 4 / 3 / 5 / 4;
  text-align: left;
}

#user-self-name, #user-self-description{
  margin-left: 5%;
}

#user-inspiration-name {
  grid-area: 3 / 1 / 4 / 2;
  justify-self: right;
  --placeholder-color: var(--template-placeholder-color-1);
  font-weight: bold;
  color: var(--template-color-1);
}

#user-inspiration-description {
  grid-area: 4 / 1 / 5 / 2;
  justify-self: right;
}

#user-inspiration-name, #user-inspiration-description {
  margin-right: 5%;
}

@keyframes invalid-flash {
  from {background-color: #f007;}
  to {background-color: none;}
}

.invalid-flash {
  animation-name: invalid-flash;
  animation-duration: 2s;
}



button#user-self-container-button {
  position: absolute;
  width: 80%;
  height: 20%;
  background: red;
}

button#user-inspiration-container-button {
  position: absolute;
  width: 80%;
  height: 20%;
  background: red;
}

